Updating README.dox

--- a/README.dox
+++ b/README.dox
@@ -2,9 +2,9 @@
 
 @mainpage 15-410 Project 2
 
-@author Name1 (id1)
-@author Name2 (id2)
+@author Prajwal Yadapadithaya (pyadapad)
+@author Rohit Upadhyaya (rjupadhy)
 
-Same drill as last time.
+Must document soon
 
 */
